--- a/ngx-numeric-range-form-field/projects/ngx-numeric-range-form-field/src/lib/container/numeric-range-form-field-container.component.html
+++ b/ngx-numeric-range-form-field/projects/ngx-numeric-range-form-field/src/lib/container/numeric-range-form-field-container.component.html
@@ -13,6 +13,8 @@
 		[minReadonly]="minReadonly"
 		[maxReadonly]="maxReadonly"
 		[required]="required"
+		[minimumControlName]="minimumControlName"
+		[maximumControlName]="maximumControlName"
 		(blurred)="onBlur()"
 		(enterPressed)="onEnterPressed()"
 		(numericRangeChanged)="onRangeValuesChanged($event)"
