--- a/ngx-numeric-range-form-field/projects/ngx-numeric-range-form-field/src/lib/control/numeric-range-form-field-control.component.html
+++ b/ngx-numeric-range-form-field/projects/ngx-numeric-range-form-field/src/lib/control/numeric-range-form-field-control.component.html
@@ -1,6 +1,6 @@
 <input
 	(blur)="onBlur()"
-	(change)="onRangeValuesChanged()"
+	(input)="onRangeValuesChanged()"
 	(keyup.enter)="onEnterPressed()"
 	[readonly]="readonly || minReadonly"
 	[formControl]="minimumControl"
@@ -11,7 +11,7 @@
 <span class="spacer">&ndash;</span>
 <input
 	(blur)="onBlur()"
-	(change)="onRangeValuesChanged()"
+	(input)="onRangeValuesChanged()"
 	(keyup.enter)="onEnterPressed()"
 	[formControl]="maximumControl"
 	[readonly]="readonly || maxReadonly"
