Add custom control style

--- a/ngx-numeric-range-form-field/projects/ngx-numeric-range-form-field-demo/src/app/app.component.html
+++ b/ngx-numeric-range-form-field/projects/ngx-numeric-range-form-field-demo/src/app/app.component.html
@@ -4,6 +4,7 @@
 	[minimumControlName]="'x'"
 	[maximumControlName]="'y'"
 	[updateOn]="'change'"
+	[controlStyle]="'height: 8px;'"
 	[minReadonly]="true"
 	(blurred)="onBlur()"
 	(enterPressed)="onEnter()"
