--- a/ngx-numeric-range-form-field/projects/ngx-numeric-range-form-field/src/lib/container/numeric-range-form-field-container.component.html
+++ b/ngx-numeric-range-form-field/projects/ngx-numeric-range-form-field/src/lib/container/numeric-range-form-field-container.component.html
@@ -6,6 +6,7 @@
 	<mat-label>{{ label }}</mat-label>
 	<ngx-numeric-range-form-field-control
 		id="numeric-range-form-control"
+		[style]="controlStyle"
 		[formControl]="control"
 		[minPlaceholder]="minPlaceholder"
 		[maxPlaceholder]="maxPlaceholder"
